tests/bad/value_enums/wrong_num_fields.oc
/// fail: Foo::Case1 needs 2 fields, got 1

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello", 42)
    match foo {
        Case0(x) | Case1(_) => println(`0|1 => {x}`)
        Case2(y) => println(`2 => {y}`)
        Case3 => println(`3 => ()`)
    }
}